refactor: update application properties and improve code formatting